# layerzero-dvn-template

./: .gitignore  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  blueprint.json  foundry.toml  package.json  remappings.txt  rust-toolchain.toml
.github/workflows/: ci.yml  verify-template.yml
contracts/src/: LZUtility.sol  LayerZeroDVNBlueprint.sol  LayerZeroDVNInstance.sol
contracts/src/tnt-core/: AssetsLib.sol  BlueprintServiceManagerBase.sol  IBlueprintServiceManager.sol  Permissions.sol  ServiceOperatorsLib.sol
docker/: entrypoint.sh
src/: bindings.rs  job.rs  lib.rs  main.rs
src/security/: mod.rs  mpc.rs  oracle.rs  signature.rs  zk_proof.rs
test_assets/: testnet1-state.json  testnet2-state.json
tests/: e2e.rs
