[package]
name = "layerzero-dvn-blueprint-template"
version = "0.1.0"
edition = "2021"
description = "A Tangle Blueprint specifying a LayerZero Decentralized Verifier Network (DVN)"
authors = ["Tangle <drew@tangle.tools>"]
license = "Unlicense"
homepage = "https://tangle.tools"
repository = "https://github.com/tangle-network/layerzero-dvn-blueprint-template"
readme = "README.md"
categories = ["cryptography", "cryptography::cryptocurrencies"]
keywords = ["tangle", "blueprint", "avs"]
rust-version = "1.81"

[dependencies]
blueprint-sdk = { path = "../gadget/crates/sdk", features = ["tangle", "evm", "macros", "local-store"] }
color-eyre = "0.6"
serde = "1.0.213"

[build-dependencies]
blueprint-sdk = { path = "../gadget/crates/sdk", features = ["build"] }

[lib]
path = "src/lib.rs"

[[bin]]
name = "layerzero-dvn-blueprint-template"
path = "src/main.rs"
